--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,8 @@
 @import "main/mixins";
 @import "main/placeholders";
 @import "main/flex";
+@import "main/slick";
+@import "main/slick-theme";
 @import "main/header";
 @import "main/info-section";
 @import "main/section-private-customers";
