--- a/app/styles/main/_header.scss
+++ b/app/styles/main/_header.scss
@@ -118,7 +118,7 @@
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 400;
-						padding: 18px 25px 10px 30px !important;
+						padding: 18px 35px 10px 30px !important;
 						text-decoration: underline;
 
 						&:hover {
@@ -126,6 +126,7 @@
 							background: #33387c;
 							border-bottom: 4px solid white;
 							color: white;
+							text-decoration: none;
 							
 						}
 
@@ -141,7 +142,7 @@
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 400;
-						padding: 18px 30px 10px 25px !important;
+						padding: 18px 36px 10px 25px !important;
 						text-decoration: underline;
 
 						&:hover {
@@ -149,6 +150,7 @@
 							background: #33387c;
 							border-bottom: 4px solid white;
 							color: white;
+							text-decoration: none;
 							
 						}
 
@@ -173,6 +175,7 @@
 							background: #33387c;
 							border-bottom: 4px solid white;
 							color: white;
+							text-decoration: none;
 							
 						}
 
