--- a/app/styles/main/_section-private-customers.scss
+++ b/app/styles/main/_section-private-customers.scss
@@ -2,7 +2,8 @@
 
 	background: url(../images/background-2.png) no-repeat;
 	background-position: top right;
-	background-size: 66%;
+	background-size: 66% 79%;
+	
 	
 	.container {
 		
