--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,4 +12,4 @@
 @import "main/info-section";
 @import "main/section-private-customers";
 @import "main/section-corporate-customers";
-
+@import "main/slider-section";
