--- a/app/styles/main/_header.scss
+++ b/app/styles/main/_header.scss
@@ -133,7 +133,7 @@
 
 						border-bottom: 4px solid #33387c;
 						border-radius: 0;
-						color: white;
+						color: #fff;
 						font-family: 'ProximaNova';
 						font-size: 16px;
 						font-stretch: normal;
@@ -146,7 +146,7 @@
 
 							background: #33387c;
 							border-bottom: 4px solid white;
-							color: white;
+							color: #fff;
 							text-decoration: none;
 							
 						}
@@ -157,7 +157,7 @@
 
 						border-bottom: 4px solid #33387c;
 						border-radius: 0;
-						color: white;
+						color: #fff;
 						font-family: 'ProximaNova';
 						font-size: 16px;
 						font-stretch: normal;
@@ -170,7 +170,7 @@
 
 							background: #33387c;
 							border-bottom: 4px solid white;
-							color: white;
+							color: #fff;
 							text-decoration: none;
 							
 						}
