--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,3 +13,4 @@
 @import "main/section-private-customers";
 @import "main/section-corporate-customers";
 @import "main/slider-section";
+@import "main/about-section";
