--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,7 @@
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
+
 @import "main/typography";
 @import "main/global";
 @import "main/mixins";
@@ -14,3 +15,5 @@
 @import "main/section-corporate-customers";
 @import "main/slider-section";
 @import "main/about-section";
+@import "main/map-section";
+@import "main/stock-section";
