--- a/app/styles/main/_stock-section.scss
+++ b/app/styles/main/_stock-section.scss
@@ -54,7 +54,7 @@
 							font-weight: 400;
 							left: 1.1%;
 							position: absolute;
-							top: 58%;
+							top: 61%;
 
 							.news-date {
 
@@ -97,6 +97,7 @@
 								font-style: normal;
 								font-weight: 700;
 								text-decoration: none;
+								margin-bottom: 20px;
 
 							}
 
