--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,3 +18,5 @@
 @import "main/map-section";
 @import "main/stock-section";
 @import "main/form-section";
+@import "main/address-section";
+@import "main/footer";
