--- a/app/styles/main/_info-section.scss
+++ b/app/styles/main/_info-section.scss
@@ -1,5 +1,9 @@
 .info-section {
 
+	background: url(../images/Layer-29.png) no-repeat;
+	background-position: bottom right;
+	background-size: 23% 47%;
+
 	.container {
 
 		.row {
