--- a/app/styles/main/_info-section.scss
+++ b/app/styles/main/_info-section.scss
@@ -39,6 +39,12 @@
 					padding: 30px 40px 33px 26px;					
 					width:100%;
 
+					span {
+
+						text-transform: uppercase;
+						
+					}
+
 					p {
 
 						color: #000;
