--- a/app/styles/main/_section-corporate-customers.scss
+++ b/app/styles/main/_section-corporate-customers.scss
@@ -11,10 +11,16 @@
 		background-size: 98.7%;
 							
 	}
+	
+	@media (min-width: 1361px) and (max-width: 1440px) {
 
+		background-size: 87.2%;
+		height: auto;
+			
+	}
+	
 
-
-	@media (min-width: 1361px) {
+	@media (min-width: 1441px) {
 
 		background-size: 77.6%;
 		height: 932px;
@@ -42,11 +48,20 @@
 									
 			}
 
-			@media (min-width: 1361px) {
+			@media (min-width: 1361px) and (max-width: 1440px){
+
+				position: absolute;
+				right: 7.1%;
+    			top: 31.5%;
+    			width: 46%;
+						
+			}
+
+			@media (min-width: 1441px){
 
 				position: absolute;
 				right: 13.3%;
-				top: 31.4%;
+    			top: 31.5%;
 				width: auto;
 			
 			}
@@ -73,7 +88,14 @@
 			padding: 20px 0px 16px 26px !important;
 			width: 27%;
 
-			@media (min-width: 1361px) {
+			@media (min-width: 1361px) and (max-width: 1440px) {
+
+				margin-left: 8%;
+				width: 25%;
+			
+			}
+
+			@media (min-width: 1441px){
 
 				margin-left: 4%;
 				width: 19%;
@@ -113,7 +135,13 @@
 							
 			}
 
-			@media (min-width: 1361px) {
+			@media (min-width: 1361px) and (max-width: 1440px) {
+
+				margin-left: 18%;
+							
+			}
+
+			@media (min-width: 1441px) {
 
 				margin-left: 22%;
 							
@@ -164,7 +192,13 @@
 							
 			}
 
-			@media (min-width: 1361px) {
+			@media (min-width: 1361px) and (max-width: 1440px) {
+
+				margin-left: 18%;
+							
+			}
+
+			@media (min-width: 1441px) {
 
 				margin-left: 22%;
 							
@@ -189,7 +223,14 @@
 										
 				}
 
-				@media (min-width: 1361px) {
+				@media (min-width: 1361px) and (max-width: 1440px){
+
+					padding-left: 79px;
+					width: 41%;
+							
+				}
+
+				@media (min-width: 1441px) {
 
 					width: 41%;
 							
