--- a/app/styles/main/_section-private-customers.scss
+++ b/app/styles/main/_section-private-customers.scss
@@ -12,7 +12,15 @@
 							
 	}
 
-	@media (min-width: 1361px) {
+	@media (min-width: 1361px) and (max-width: 1440px){
+
+		background: url(../images/background-2.png) repeat-y;
+		background-position: top right;
+		background-size: 65%;
+			
+	}
+
+	@media (min-width: 1441px) {
 
 		background: url(../images/background-2.png) no-repeat;
 		background-position: top right;
