--- a/app/styles/main/_about-section.scss
+++ b/app/styles/main/_about-section.scss
@@ -16,8 +16,8 @@
 	    	.div-left {
 
 				color: #fff;
-				font-family: 'proxima_nova_cn_rgregular';
-				font-size: 18px;
+				font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+				font-size: 17px;
 				font-stretch: normal;
 				font-style: normal;
 				font-weight: 400;
@@ -28,8 +28,8 @@
 	    		.About-company {
 
 					color: #fff;
-					font-family:'proxima_nova_rgbold';
-					font-size: 34px;
+					font-family:'proxima_nova_rgbold', Arial, sans-serif;
+					font-size: 33px;
 					font-stretch: normal;
 					font-style: normal;
 					font-weight: 700;
@@ -41,8 +41,8 @@
 	    		span {
 
 					color: #fff;
-					font-family:'proxima_nova_condensedlight';
-					font-size: 24px;
+					font-family:'proxima_nova_condensedlight', Arial, sans-serif;
+					font-size: 23px;
 					font-stretch: normal;
 					font-style: normal;
 					font-weight: 300;
@@ -55,8 +55,8 @@
 	    	.div-right {
 
 				color: #fff;
-				font-family: 'proxima_nova_cn_rgregular';
-				font-size: 18px;
+				font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+				font-size: 17px;
 				font-stretch: normal;
 				font-style: normal;
 				font-weight: 400;
@@ -130,14 +130,14 @@
 				.first-div {
 
 					color: #fff;
-					font-family: 'proxima_nova_condensedlight';
-					font-size: 24px;
+					font-family: 'proxima_nova_condensedlight', Arial, sans-serif;
+					font-size: 23px;
 					font-stretch: normal;
 					font-style: normal;
 					font-weight: 300;
-					text-transform: uppercase;
-					margin-top: 50px;
 					margin-bottom: 52px;
+					margin-top: 50px;
+					text-transform: uppercase;
 
 
 				}
@@ -149,17 +149,15 @@
 				.sixth-div {
 
 					color: #fff;
-					font-family:'proxima_nova_rgbold';
-					font-size: 16px;
+					font-family:'proxima_nova_rgbold', Arial, sans-serif;
+					font-size: 15px;
 					font-stretch: normal;
 					font-style: normal;
 					font-weight: 700;
-					margin-top: 54px;
 					margin-bottom: 62px;
+					margin-top: 54px;
 
 				}
-
-
 
 	    	} 
 
