--- a/app/styles/main/_address-section.scss
+++ b/app/styles/main/_address-section.scss
@@ -36,11 +36,11 @@
 		    		p {
 
 						color: #2e3180;
-						font-family: 'proxima_nova_condensedlight';
-						font-size: 16px;
-						// font-stretch: normal;
-						// font-style: normal;
-						// font-weight: 300;
+						font-family: 'proxima_nova_condensedlight', Arial, sans-serif;
+						font-size: 15px;
+						font-stretch: normal;
+						font-style: normal;
+						font-weight: 300;
 						
 					}
 
@@ -52,11 +52,11 @@
 						span {
 
 							color: #2e3180;
-							font-family: 'proxima_nova_condensedlight';
-							font-size: 16px;
-							// font-stretch: normal;
-							// font-style: normal;
-							// font-weight: 300;
+							font-family: 'proxima_nova_condensedlight', Arial, sans-serif;
+							font-size: 15px;
+							font-stretch: normal;
+							font-style: normal;
+							font-weight: 300;
 							text-decoration: underline;
 
 						}
@@ -87,11 +87,11 @@
 					.section-contact-phone {
 
 						color: #33387c;
-						font-family: 'proxima_nova_rgbold';
-						font-size: 20px;
-						// font-stretch: normal;
-						// font-style: normal;
-						// font-weight: 700;
+						font-family: 'proxima_nova_rgbold', Arial, sans-serif;
+						font-size: 19px;
+						font-stretch: normal;
+						font-style: normal;
+						font-weight: 700;
 						padding: 0;
 						
 						span {
@@ -111,11 +111,11 @@
 					.section-contact-link {
 
 						color: #33387c;
-						font-family: 'proxima_nova_cn_rgregular';
-						font-size: 16px;
-						// font-stretch: normal;
-						// font-style: normal;
-						// font-weight: 400;
+						font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+						font-size: 15px;
+						font-stretch: normal;
+						font-style: normal;
+						font-weight: 400;
 						margin-top: 25px;
 						padding: 0;
 						text-decoration: underline;
