--- a/app/styles/main/_footer.scss
+++ b/app/styles/main/_footer.scss
@@ -22,8 +22,8 @@
 				p {
 
 					color: #33387c;
-					font-family: 'proxima_nova_cn_rgregular';
-					font-size: 16px;
+					font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+					font-size: 15px;
 					font-stretch: normal;
 					font-style: normal;
 					font-weight: 400;
@@ -39,8 +39,8 @@
 				p {
 
 					color: #33387c;
-					font-family: 'proxima_nova_cn_rgregular';
-					font-size: 16px;
+					font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+					font-size: 15px;
 					font-stretch: normal;
 					font-style: normal;
 					font-weight: 400;
