--- a/app/styles/main/_form-section.scss
+++ b/app/styles/main/_form-section.scss
@@ -35,8 +35,8 @@
 					span {
 
 						color: #000;
-						font-family:'proxima_nova_rgbold';
-						font-size: 31px;
+						font-family:'proxima_nova_rgbold', Arial, sans-serif;
+						font-size: 30px;
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 700;
@@ -72,8 +72,8 @@
 					p {
 
 						color: #2e3180;
-						font-family:'proxima_nova_rgbold';
-						font-size: 16px;
+						font-family:'proxima_nova_rgbold', Arial, sans-serif;
+						font-size: 15px;
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 700;
@@ -119,8 +119,8 @@
 						border-bottom: 4px solid #eaeaf2;
 						border-radius: 0;
 						color: #2e3180;
-						font-family: 'proxima_nova_cn_rgregular';
-						font-size: 16px;
+						font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+						font-size: 14px;
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 400;
@@ -143,8 +143,8 @@
 						border-bottom: 4px solid #eaeaf2;
 						border-radius: 0;
 						color: #2e3180;
-						font-family: 'proxima_nova_cn_rgregular';
-						font-size: 16px;
+						font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+						font-size: 14px;
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 400;
@@ -167,8 +167,8 @@
 						border-bottom: 4px solid #eaeaf2;
 						border-radius: 0;
 						color: #2e3180;
-						font-family: 'proxima_nova_cn_rgregular';
-						font-size: 16px;
+						font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+						font-size: 14px;
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 400;
