--- a/app/styles/main/_info-section.scss
+++ b/app/styles/main/_info-section.scss
@@ -48,8 +48,8 @@
 					p {
 
 						color: #000;
-						font-family:'proxima_nova_rgbold';
-						font-size: 18px;
+						font-family:'proxima_nova_rgbold', Arial, sans-serif;
+						font-size: 17px;
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 700;
@@ -97,8 +97,8 @@
 						p {
 
 							color: #fff;
-							font-family:'proxima_nova_condensedlight';
-							font-size: 24px;
+							font-family:'proxima_nova_condensedlight', Arial, sans-serif;
+							font-size: 23px;
 							font-stretch: normal;
 							font-style: normal;
 							font-weight: 300;
@@ -106,8 +106,9 @@
 							text-transform: uppercase;
 
 							span {
-
-								font-size: 34px;
+								
+								font-family:'proxima_nova_rgbold', Arial, sans-serif;
+								font-size: 33px;
 								font-stretch: normal;
 								font-style: normal;
 								font-weight: 700;
