--- a/app/styles/main/_section-private-customers.scss
+++ b/app/styles/main/_section-private-customers.scss
@@ -61,8 +61,8 @@
 				p {
 
 					color: #000;
-					font-family:'proxima_nova_cn_rgregular';
-					font-size: 18px;
+					font-family:'proxima_nova_cn_rgregular', Arial, sans-serif;
+					font-size: 17px;
 					font-weight: 400;
 					line-height: 30px;
 					margin: 0;
@@ -79,8 +79,8 @@
 				.servises-info {
 
 					color: #000;
-					font-family:'proxima_nova_rgbold';
-					font-size: 18px;
+					font-family:'proxima_nova_rgbold', Arial, sans-serif;
+					font-size: 17px;
 					font-weight: 700;
 					padding-top: 30px;
 					text-align: right;
@@ -111,8 +111,8 @@
 					span {
 
 						color: #000;
-						font-family:'proxima_nova_rgbold';
-						font-size: 31px;
+						font-family:'proxima_nova_rgbold', Arial, sans-serif;
+						font-size: 30px;
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 700;
@@ -134,8 +134,8 @@
 				.servises-info {
 
 					color: #000;
-					font-family:'proxima_nova_rgbold';
-					font-size: 18px;
+					font-family:'proxima_nova_rgbold', Arial, sans-serif;
+					font-size: 17px;
 					font-weight: 700;
 					padding-right: 10px;
 					padding-top: 30px;
