--- a/app/styles/main/_global.scss
+++ b/app/styles/main/_global.scss
@@ -13,7 +13,7 @@ $base-bg: #83857d;
 
 body {
 
-	font-family: 'proxima_nova_condensedlight';
+	font-family: 'proxima_nova_condensedlight', Arial, sans-serif;
 	font-size: 100%;
 	height: 100%;
 	overflow: visible;
@@ -48,8 +48,8 @@ a:focus {
 h1 {
 
 	color: #000;
-	font-family:'proxima_nova_rgbold';
-	font-size: 34px;
+	font-family:'proxima_nova_rgbold', Arial, sans-serif;
+	font-size: 33px;
 	font-stretch: normal;
 	font-style: normal;
 	font-weight: 700;
