--- a/app/styles/main/_header.scss
+++ b/app/styles/main/_header.scss
@@ -43,8 +43,8 @@
 
 							border-radius: 0;
 							color: #33387c;
-							font-family: 'proxima_nova_rgbold';
-							font-size: 20px;
+							font-family: 'proxima_nova_rgbold', Arial, sans-serif;
+							font-size: 19px;
 							font-stretch: normal;
 							font-style: normal;
 							font-weight: 700;
@@ -52,7 +52,7 @@
 
 							span {
 
-								font-size: 26px;
+								font-size: 25px;
 
 							}
 
@@ -68,8 +68,8 @@
 
 							border-radius: 0;
 							color: #33387c;
-							font-family: 'proxima_nova_cn_rgregular';
-							font-size: 16px;
+							font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+							font-size: 15px;
 							font-stretch: normal;
 							font-style: normal;
 							font-weight: 400;
@@ -105,8 +105,8 @@
 					border-radius: 0;
 					border: 4px solid #33387c;
 					color: #fff;
-					font-family: 'proxima_nova_rgbold';
-					font-size: 18px;
+					font-family: 'proxima_nova_rgbold', Arial, sans-serif;
+					font-size: 17px;
 					font-stretch: normal;
 					font-style: normal;
 					font-weight: 700;
@@ -151,8 +151,8 @@
 						border-bottom: 4px solid #33387c;
 						border-radius: 0;
 						color: #fff;
-						font-family: 'proxima_nova_cn_rgregular';
-						font-size: 16px;
+						font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+						font-size: 14px;
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 400;
@@ -175,8 +175,8 @@
 						border-bottom: 4px solid #33387c;
 						border-radius: 0;
 						color: #fff;
-						font-family: 'proxima_nova_cn_rgregular';
-						font-size: 16px;
+						font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+						font-size: 14px;
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 400;
@@ -199,8 +199,8 @@
 						border-bottom: 4px solid #33387c;
 						border-radius: 0;
 						color: #fff;
-						font-family: 'proxima_nova_cn_rgregular';
-						font-size: 16px;
+						font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+						font-size: 14px;
 						font-stretch: normal;
 						font-style: normal;
 						font-weight: 400;
