--- a/app/styles/main/_section-corporate-customers.scss
+++ b/app/styles/main/_section-corporate-customers.scss
@@ -105,8 +105,8 @@
 			span {
 
 				color: #000;
-				font-family:'proxima_nova_rgbold';
-				font-size: 31px;
+				font-family:'proxima_nova_rgbold', Arial, sans-serif;
+				font-size: 30px;
 				font-stretch: normal;
 				font-style: normal;
 				font-weight: 700;
@@ -151,8 +151,8 @@
 
 				background-color: #fff;
 				color: #000;
-				font-family:'proxima_nova_rgbold';
-				font-size: 18px;
+				font-family:'proxima_nova_rgbold', Arial, sans-serif;
+				font-size: 17px;
 				font-weight: 700;
 				font-stretch: normal;
 				font-style: normal;
@@ -210,8 +210,8 @@
 
 				background-color: #fff;
 				color: #000;
-				font-family:'proxima_nova_rgbold';
-				font-size: 18px;
+				font-family:'proxima_nova_rgbold', Arial, sans-serif;
+				font-size: 17px;
 				font-weight: 700;
 				font-stretch: normal;
 				font-style: normal;
