--- a/app/styles/main/_slider-section.scss
+++ b/app/styles/main/_slider-section.scss
@@ -10,21 +10,21 @@
 
 				.slider-div {
 
-					margin-right: 30px;
-    				margin-left: 30px;
-					border: 4px solid #33387c;
-					height: 208px;
 					@include align-items(center);
 					@include flex-direction(column);
 					@include flexbox;
 					@include justify-content(space-around);
+					border: 4px solid #33387c;
+					height: 208px;
+					margin-right: 30px;
 					text-align: center;
+    				margin-left: 30px;
 
 					p {
 						
 						color: #000;
-						font-family: 'proxima_nova_rgbold';
-						font-size: 16px;
+						font-family: 'proxima_nova_rgbold', Arial, sans-serif;
+						font-size: 15px;
 						// font-stretch: normal;
 						// font-style: normal;
 						// font-weight: 700;
