--- a/app/styles/main/_stock-section.scss
+++ b/app/styles/main/_stock-section.scss
@@ -49,8 +49,8 @@
 						.stock-info {
 
 							color: #000;
-							font-family: 'proxima_nova_cn_rgregular';
-							font-size: 18px;
+							font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+							font-size: 17px;
 							font-stretch: normal;
 							font-style: normal;
 							font-weight: 400;
@@ -67,8 +67,8 @@
 							.news-date {
 
 								color: #000;
-								font-family: 'proxima_nova_cn_rgregular';
-								font-size: 18px;
+								font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+								font-size: 17px;
 								font-stretch: normal;
 								font-style: normal;
 								font-weight: 400;
@@ -81,8 +81,8 @@
 
 							border: 4px solid #33387c;
 							color: #33387c;
-							font-family: 'proxima_nova_cn_rgregular';
-							font-size: 16px;
+							font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+							font-size: 15px;
 							font-stretch: normal;
 							font-style: normal;
 							font-weight: 400;
@@ -99,8 +99,8 @@
 							.stock-title {
 
 								color: #000;
-								font-family: 'proxima_nova_rgbold';
-								font-size: 24px;
+								font-family: 'proxima_nova_rgbold', Arial, sans-serif;
+								font-size: 23px;
 								font-stretch: normal;
 								font-style: normal;
 								font-weight: 700;
@@ -116,8 +116,8 @@
 
 							padding-top: 30px;
 							color: #33387c;
-							font-family: 'proxima_nova_cn_rgregular';
-							font-size: 16px;
+							font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+							font-size: 15px;
 							font-stretch: normal;
 							font-style: normal;
 							font-weight: 400;
@@ -137,8 +137,8 @@
 							.news-title {
 
 								color: #000;
-								font-family: 'proxima_nova_rgbold';
-								font-size: 24px;
+								font-family: 'proxima_nova_rgbold', Arial, sans-serif;
+								font-size: 23px;
 								font-stretch: normal;
 								font-style: normal;
 								font-weight: 700;
@@ -149,8 +149,8 @@
 							.news-date {
 
 								color: #000;
-								font-family: 'proxima_nova_cn_rgregular';
-								font-size: 18px;
+								font-family: 'proxima_nova_cn_rgregular', Arial, sans-serif;
+								font-size: 17px;
 								font-stretch: normal;
 								font-style: normal;
 								font-weight: 400;
