--- a/app/styles/main/_slider-section.scss
+++ b/app/styles/main/_slider-section.scss
@@ -3,42 +3,86 @@
 	.container {
 
 		.row {
+
 			.Mycarusel2 {
 
 				margin-top: 58px;
     			margin-bottom: 65px;
 
-				.slider-div {
+    			
+    			.slick-track {
 
-					@include align-items(center);
-					@include flex-direction(column);
-					@include flexbox;
-					@include justify-content(space-around);
-					border: 4px solid #33387c;
-					height: 208px;
-					margin-right: 30px;
-					text-align: center;
-    				margin-left: 30px;
+    				& > [class*='col-'] {
 
-					p {
-						
-						color: #000;
-						font-family: 'proxima_nova_rgbold', Arial, sans-serif;
-						font-size: 15px;
-						// font-stretch: normal;
-						// font-style: normal;
-						// font-weight: 700;
+						padding: 0;
+					
+					}
 
-						span {
+					
+
+	    			.slider-div-first {
+
+						@include align-items(center);
+						@include flex-direction(column);
+						@include flexbox;
+						@include justify-content(space-around);
+						border: 4px solid #33387c;
+						height: 208px;
+						margin-left: 30px;
+						margin-right: 30px;
+						text-align: center;
+
+	    				p {
 							
-							font-size: 64px;
+							color: #000;
+							font-family: 'proxima_nova_rgbold', Arial, sans-serif;
+							font-size: 15px;
+							font-stretch: normal;
+							font-style: normal;
+							font-weight: 700;
+
+							span {
+								
+								font-size: 64px;
+
+							}
 
 						}
 
+	    			}
+
+					.slider-div {
+
+						@include align-items(center);
+						@include flex-direction(column);
+						@include flexbox;
+						border: 4px solid #33387c;
+						height: 208px;
+						margin-left: 30px;
+						margin-right: 30px;
+						text-align: center;
+
+						p {
+							
+							color: #000;
+							font-family: 'proxima_nova_rgbold', Arial, sans-serif;
+							font-size: 15px;
+							font-stretch: normal;
+							font-style: normal;
+							font-weight: 700;
+
+							span {
+								
+								font-size: 64px;
+
+							}
+
+						}
+						
 					}
-					
+
 				}
-				
+
 			}
 
 		}
