--- a/app/styles/main/_section-private-customers.scss
+++ b/app/styles/main/_section-private-customers.scss
@@ -106,6 +106,15 @@
 
 					border: 4px solid #33387c;
 					padding: 25px 33px 21px 26px !important;
+					width: 37.666667%;
+					margin-right: 4%;
+
+					@media (min-width: 992px) and (max-width: 1024px) {
+
+						width: 41.666667%;
+						margin-right: auto;
+											
+					}
 					
 
 					span {
